update to other.css to make nag the same

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
       </a>
 
       <ul class="nav">
-        <!-- <li id="hamburger"><div class="line"></div><div class="line"></div><div class="line"></div></li>
- -->
-        <li><a class="specialLink" href="philisophy.html">Philisophy</a></li>     
+        <li><a href="philisophy.html">Philisophy</a></li>     
         <li><a href="product.html">Product</a></li>     
         <li><a href="contact.html">Contact</a></li>     
       </ul>
