--- a/contact.html
+++ b/contact.html
@@ -10,16 +10,19 @@
     <div id="text">
       <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
     </div>
-      <div id="footer">
+      
+    <div id="footer">
       <a href="index.html">
         <div id="logo">
         </div>
       </a>
+
       <ul class="nav">
-        <li><a href="philisophy.html">Philisophy</a></li>      
+        <li><a href="philisophy.html">Philisophy</a></li>     
         <li><a href="product.html">Product</a></li>     
         <li><a href="contact.html">Contact</a></li>     
       </ul>
+
       <a href="https://instagram.com/marylouise0701/" target="_blank">
         <div id="instagram">
         </div>
@@ -28,8 +31,16 @@
         <div id="blog">
         </div>
       </a>
+
+      <div class="submenu">
+         <span id="hamburger" href= "#">&#9776;</span> 
+      </div>
     </div>
+
   </div>
+
+  <script src="js/jquery-2.1.4.js"></script>
+  <script src="js/index.js"></script>
 
 </body>
 </html>
