--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,9 @@
   <div id="header">
   </div>
   <div id="container">
-    <div id="text">
-      <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+    <div id="textContact">
+      <a href="mailto:marylouspencer86@gmail.com" class="contact"> GET IN TOUCH AND LET'S GET FJ&Uuml;LED
+      </a> 
     </div>
       
     <div id="footer">
@@ -17,10 +18,10 @@
         </div>
       </a>
 
-      <ul class="nav">
+       <ul class="nav snip1211">
         <li><a href="philisophy.html">Philisophy</a></li>     
         <li><a href="product.html">Product</a></li>     
-        <li><a href="contact.html">Contact</a></li>     
+        <li><a href="contact.html" class="bold">Contact</a></li>     
       </ul>
 
       <a href="https://instagram.com/marylouise0701/" target="_blank">
