--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
 </head>
 <body>
   <div id="container">
-    <!-- <header>
-      <div id="logo">
-      </div>
-    </header> -->
+   
     <div id="image">
     </div>
+
     <div id="footer">
       <a href="index.html">
         <div id="logo">
         </div>
       </a>
 
-      <ul class="nav">
+      <ul class="nav snip1211">
         <li><a href="philisophy.html">Philisophy</a></li>     
         <li><a href="product.html">Product</a></li>     
         <li><a href="contact.html">Contact</a></li>     
