Product page is now responsive

--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
   <link rel="stylesheet" href="css/other.css">
 </head>
 <body>
-  <div id="header">
-  </div>
+  <!-- <div id="header">
+  </div> -->
   <div id="container">
     <div id="textContact">
       <a href="mailto:marylouspencer86@gmail.com" class="contact"> GET IN TOUCH AND LET'S GET FJ&Uuml;LED
@@ -19,7 +19,7 @@
       </a>
 
        <ul class="nav snip1211">
-        <li><a href="philisophy.html">Philisophy</a></li>     
+        <li><a href="philisophy.html">Philosophy</a></li>     
         <li><a href="product.html">Product</a></li>     
         <li><a href="contact.html" class="bold">Contact</a></li>     
       </ul>
