--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </a>
 
       <ul class="nav snip1211">
-        <li><a href="philisophy.html">Philisophy</a></li>     
+        <li><a href="philisophy.html">Philosophy</a></li>     
         <li><a href="product.html">Product</a></li>     
         <li><a href="contact.html">Contact</a></li>     
       </ul>
