--- a/philisophy.html
+++ b/philisophy.html
@@ -20,7 +20,7 @@
       </a>
 
       <ul class="nav snip1211">
-        <li><a href="philisophy.html" class="bold">Philisophy</a></li>     
+        <li><a href="philisophy.html" class="bold">Philosophy</a></li>     
         <li><a href="product.html">Product</a></li>     
         <li><a href="contact.html">Contact</a></li>     
       </ul>
