--- a/product.html
+++ b/product.html
@@ -4,59 +4,13 @@
   <link rel="stylesheet" href="css/other.css">
 </head>
 <body>
-  <div id="header">
+  <!-- <div id="header">
     <style> @font-face { font-family: Adelle; src: url("font/adelleBasic_Bold.otf");}
     </style>
-  </div>
-  <div id="container">
-    <!-- <div id="products">
-      <div id="productOne">
-        <div id="imageOne">
-        </div>
-        <div id ="textOne">
-          <p> Nuts, nuts and some nuts. Longer list of products la de da. Woopdie doo. Yay. Even more. </p>
-        </div>
-      </div>
-      <div id="productTwo">
-        <div id="imageTwo">
-        </div>
-        <div id ="textTwo">
-          <p> Nuts, nuts and some nuts </p>
-        </div>
-      </div>
-      <div id="productThree">
-        <div id="imageThree">
-        </div>
-        <div id ="textThree">
-          <p> Nuts, nuts and some nuts </p>
-        </div>
-      </div>
-      <div id="productFour">
-        <div id="imageFour">
-        </div>
-        <div id ="textFour">
-          <p> Nuts, nuts and some nuts </p>
-        </div>
-      </div>
-      <div id="productFive">
-        <div id="imageFive">
-        </div>
-        <div id ="textFive">
-          <p> Nuts, nuts and some nuts </p>
-        </div>
-      </div>
-    <div id="productSix">
-        <div id="imageSix">
-        </div>
-        <div id ="textSix">
-          <p> Nuts, nuts and some nuts </p>
-        </div> -->
-      <!-- </div> -->
-   
-
-    <!-- new product page -->
+  </div> -->
+  <div id="productcontainer">
     <figure class="snip1212">
-      <img src="css/images/productOne.png">
+      <img src="css/images/bar10.jpg">
       <figcaption>
         <h2>Nut Bars</h2>
         <p>You'll be going crazy for these nutty numbers. </p>
@@ -65,7 +19,7 @@
     </figure>
     
     <figure class="snip1212">
-      <img src="css/images/productTwo.png">
+      <img src="css/images/bar14.jpg">
       <figcaption>
         <h2>Nut Bars</h2>
         <p>You'll be going crazy for these nutty numbers. </p>
@@ -74,7 +28,7 @@
     </figure>
 
      <figure class="snip1212">
-      <img src="css/images/productThree.png">
+      <img src="css/images/bar16.jpg">
       <figcaption>
         <h2>Nut Bars</h2>
         <p>You'll be going crazy for these nutty numbers. </p>
@@ -83,7 +37,7 @@
     </figure>
 
      <figure class="snip1212">
-      <img src="css/images/productFour.png">
+      <img src="css/images/product8.jpg">
       <figcaption>
         <h2>Nut Bars</h2>
         <p>You'll be going crazy for these nutty numbers. </p>
@@ -92,7 +46,7 @@
     </figure>
 
     <figure class="snip1212">
-      <img src="css/images/productFive.png">
+      <img src="css/images/bar15.jpg">
       <figcaption>
         <h2>Nut Bars</h2>
         <p>You'll be going crazy for these nutty numbers. </p>
@@ -101,14 +55,13 @@
     </figure>
 
     <figure class="snip1212">
-      <img src="css/images/productSix.png">
+      <img src="css/images/bar13.jpg">
       <figcaption>
         <h2>Nut Bars</h2>
         <p>You'll be going crazy for these nutty numbers. </p>
       </figcaption>
       <a href="#"></a>
     </figure>
-
   </div>
   <!--   End new product page -->
 
@@ -119,7 +72,7 @@
     </a>
 
     <ul class="nav snip1211">
-      <li><a href="philisophy.html">Philisophy</a></li>     
+      <li><a href="philisophy.html">Philosophy</a></li>     
       <li><a href="product.html" class="bold">Product</a></li>     
       <li><a href="contact.html">Contact</a></li>     
     </ul>
